tests/script/negative/typecheck/shadow-global-helper-argument.s
global bool f = True;

@initial
go() {
  foo(f);
  terminate();
}

foo(bool f) {
  !f;
}
